# diplom

./: .gitignore  db — копия.sqlite3  package-lock.json  package.json  parser_timetable.py  pyproject.toml
diplom/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  enums.ts  interfaces.ts  main.ts  requests.ts  router.ts  store.ts
frontend/src/components/: VDeleteTimetableModal.vue  VLoginModal.vue  VLoginModel.vue  VMainPage.vue  VPrintModal.vue  VResetTimetableModal.vue  VSearch.vue  VTable.vue  VTableCell.vue  VTableCellAbsolute.vue  VTableRow.vue  VTimeTable.vue  VTimetableModal.vue
schedule/: admin.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
schedule/management/commands/: get_timetable.py  test_timetable.py
schedule/migrations/: 0001_initial.py  0002_weekdays.py  0003_alter_timetable_day.py  0004_lessonstimes.py  0005_alter_timetable_lesson_number.py  0006_timetable_end_time_timetable_start_time_and_more.py  0007_alter_timetable_group_alter_timetable_teacher.py  0008_timetable_once.py  0009_timetable_date_alter_timetable_end_time_and_more.py  0010_teacher_user.py
schedule/templates/: timetable.html
schedule/templatetags/: filters.py
schedule/tests/: test_timetable.py
